# hackathon

./: .gitignore  docker-compose.yml
be/: .env.example  .gitignore  Dockerfile  Makefile  api.py  api_model.py  docker-compose.yml  pyproject.toml  requirements.txt
fe/: .env.example  Dockefile  Dockerfile  package.json
fe/src/: App.tsx  HomePage.tsx  index.tsx  themes.tsx
fe/src/components/chat/: BrandSelect.tsx  Carousel.tsx  Chat.tsx  ChatInput.tsx  CustomButton.tsx  IntroForm.tsx  QuestionWithAnswers.tsx  SliderQuestion.tsx  YesNoQuestion.tsx
fe/src/utils/: fetchAPI.ts
